--- a/event/elog3.config
+++ b/event/elog3.config
@@ -1,7 +1,7 @@
 [
     {sasl, [
                 {sasl_error_logger, false},
-                {error_logger_mf_dir, "/Users/caoguanghui/Workspace/GitHub_Repo/erlang/event/error.log"},
+                {error_logger_mf_dir, "/Users/caoguanghui/Workspace/GitHub_Repo/erlang/event/error_logs"},
                 {error_logger_mf_maxbytes, 10485760},
                 {error_logger_mf_maxfiles, 10}
            ]
