--- a/event/elog4.config
+++ b/event/elog4.config
@@ -2,7 +2,7 @@
     {sasl,  [
                 {sasl_error_logger, false},
                 {errlog_type, error},
-                {error_logger_mf_dir, ""},
+                {error_logger_mf_dir, "/Users/caoguanghui/Workspace/GitHub_Repo/erlang/event/error_logs"},
                 {error_logger_mf_maxbytes, 10485760},
                 {error_logger_mf_maxfiles, 10}
             ]
